--- a/index.html
+++ b/index.html
@@ -31,22 +31,31 @@
         <div id="bodyContent">
             <section id="mainContent">
                 <h1>About Me</h1>
-                <div class="picSection">
-                    <div class="thumbnail left">
-                        <img src="" alt="">
-                        <p class="label"></p>
-                    </div>
-                    <div class="thumbnail right">
-                        <img src="" alt="">
-                        <p class="label"></p>
-                    </div>
-                </div>
+                <img id="profilePic" src="assets/images/profile.jpg" alt="My profile picture">
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi, dolorum amet, qui corporis ipsam omnis excepturi quis ut culpa tenetur tempora sed et delectus repudiandae illum expedita aut repellat. Fugit, asperiores. Architecto cupiditate ullam eius placeat ex autem eveniet vero odio tempora ipsum quas, officiis impedit esse a quis qui iusto quaerat provident molestiae hic? Repellendus voluptas animi recusandae quos!
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi magni aspernatur odit suscipit fuga obcaecati laboriosam. Officiis atque optio quisquam explicabo fuga asperiores eveniet, amet, ratione quasi accusamus quo maiores culpa inventore distinctio id aspernatur voluptatibus minima? Sint quisquam accusantium modi cupiditate sit temporibus quasi ut, corporis reprehenderit necessitatibus magni dolore veniam explicabo dolores mollitia incidunt optio fuga totam laborum aliquid illum animi. Illo dolor eaque ullam earum dolorem magnam officiis error quasi atque nostrum accusantium veritatis quam, temporibus fugit?
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem modi eum deserunt mollitia, ducimus minima in deleniti omnis! Iure ex tenetur omnis facilis dolorum inventore distinctio accusantium! Omnis laborum nulla, maxime saepe ex blanditiis asperiores provident quibusdam labore eligendi consequuntur eum voluptatum eaque. Nemo ab itaque quis explicabo dolorem cumque aliquam ex voluptas distinctio, doloremque error temporibus voluptates dolores exercitationem alias pariatur harum dolorum ipsum, laboriosam excepturi sapiente in unde ducimus magni? Excepturi, dolorum iusto nobis enim tempora accusantium iure natus ipsa incidunt perspiciatis a quae consectetur aliquid corrupti vel!
+                </p>
             </section>
             <section id="sideBar">
                 <h2>Connect With Me</h2>
-                <div id="gitHubIcon" class="socialIcon"></div>
-                <div id="linkedinIcon" class="socialIcon"></div>
-                <div id="stackIcon" class="socialIcon"></div>
+                <a href="https://github.com/amcnulty" class="socialIcon">
+                    <div id="gitHubIconTop"></div>
+                    <div id="gitHubIcon"></div>
+                </a>
+                <a href="https://www.linkedin.com/in/aaron-mcnulty-64008183/"  class="socialIcon">
+                    <div id="linkedinIconTop"></div>
+                    <div id="linkedinIcon"></div>
+                </a>
+                <a href="https://stackoverflow.com/users/8456358/amcnulty88?tab=profile"  class="socialIcon">
+                    <div id="stackIconTop"></div>
+                    <div id="stackIcon"></div>
+                </a>
             </section>
         </div>
         <div class="push"></div>
