--- a/portfolio.html
+++ b/portfolio.html
@@ -33,20 +33,59 @@
                 <h1>Portfolio</h1>
                 <div class="picSection">
                     <div class="thumbnail left">
-                        <img src="" alt="">
-                        <p class="label"></p>
+                        <img src="assets/images/portfolio/music.jpg" alt="music">
+                        <span class="label">Music</span>
                     </div>
                     <div class="thumbnail right">
-                        <img src="" alt="">
-                        <p class="label"></p>
+                        <img src="assets/images/portfolio/cooking.jpg" alt="cooking">
+                        <span class="label">Cooking</span>
                     </div>
                 </div>
+                <div class="picSection">
+                    <div class="thumbnail left">
+                        <img src="assets/images/portfolio/motorcycle.jpg" alt="motorcycles">
+                        <span class="label">Motorcycles</span>
+                    </div>
+                    <div class="thumbnail right">
+                        <img src="assets/images/portfolio/swimming.jpg" alt="swimming">
+                        <span class="label">Swimming</span>
+                    </div>
+                </div>
+                <div class="picSection">
+                        <div class="thumbnail left">
+                            <img src="assets/images/portfolio/biking.jpg" alt="biking">
+                            <span class="label">Biking</span>
+                        </div>
+                        <div class="thumbnail right">
+                            <img src="assets/images/portfolio/pets.jpg" alt="pets">
+                            <span class="label">Pets</span>
+                        </div>
+                    </div>
+                    <div class="picSection">
+                        <div class="thumbnail left">
+                            <img src="assets/images/portfolio/sushi.jpg" alt="sushi">
+                            <span class="label">Sushi</span>
+                        </div>
+                        <div class="thumbnail right">
+                            <img src="assets/images/portfolio/dirtbike.jpg" alt="dirtbike">
+                            <span class="label">Dirt Bikes</span>
+                        </div>
+                    </div>
             </section>
             <section id="sideBar">
                 <h2>Connect With Me</h2>
-                <div id="gitHubIcon" class="socialIcon"></div>
-                <div id="linkedinIcon" class="socialIcon"></div>
-                <div id="stackIcon" class="socialIcon"></div>
+                <a href="https://github.com/amcnulty" class="socialIcon">
+                    <div id="gitHubIconTop"></div>
+                    <div id="gitHubIcon"></div>
+                </a>
+                <a href="https://www.linkedin.com/in/aaron-mcnulty-64008183/"  class="socialIcon">
+                    <div id="linkedinIconTop"></div>
+                    <div id="linkedinIcon"></div>
+                </a>
+                <a href="https://stackoverflow.com/users/8456358/amcnulty88?tab=profile"  class="socialIcon">
+                    <div id="stackIconTop"></div>
+                    <div id="stackIcon"></div>
+                </a>
             </section>
         </div>
         <div class="push"></div>
