Bug fixes and Additions
Fixed a bug that was causing a graphical error on firefox and IE.
Fixed a bug where users could not click on the label in a form to activate the input field.
Added comments to the html and css files.
Changed the way the social media icons where styled to make them cross-browser and not hard coded.
Deleted bloat code.

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Aaron's Portfolio | A portfolio of my work</title>
     <meta name="author" content="Aaron Michael McNulty">
+    <title>Aaron's Portfolio | A portfolio of my work</title>
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/icon/favicon.ico">
     <link type="text/css" rel="stylesheet" href="assets/css/reset.css">
     <link type="text/css" rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <!-- The entire content of the site except for the sticky footer -->
     <div id="content">
         <header>
             <section>
@@ -75,19 +76,20 @@
             <section id="sideBar">
                 <h2>Connect With Me</h2>
                 <a href="https://github.com/amcnulty" class="socialIcon">
-                    <div id="gitHubIconTop"></div>
-                    <div id="gitHubIcon"></div>
+                    <div id="gitHubIconRed"></div>
+                    <div id="gitHubIconBlack"></div>
                 </a>
-                <a href="https://www.linkedin.com/in/aaron-mcnulty-64008183/"  class="socialIcon">
-                    <div id="linkedinIconTop"></div>
-                    <div id="linkedinIcon"></div>
+                <a id="middleIcon" href="https://www.linkedin.com/in/aaron-mcnulty-64008183/"  class="socialIcon">
+                    <div id="linkedinIconRed"></div>
+                    <div id="linkedinIconBlack"></div>
                 </a>
                 <a href="https://stackoverflow.com/users/8456358/amcnulty88?tab=profile"  class="socialIcon">
-                    <div id="stackIconTop"></div>
-                    <div id="stackIcon"></div>
+                    <div id="stackIconRed"></div>
+                    <div id="stackIconBlack"></div>
                 </a>
             </section>
         </div>
+        <!-- This is a blank div that is given the same height as the footer. This makes the body long enough to add in a footer without it overlapping content in the body. -->
         <div class="push"></div>
     </div>
     <footer>
