--- a/contact.html
+++ b/contact.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contact Me | Send Me a Message</title>
     <meta name="author" content="Aaron Michael McNulty">
+    <title>Contact Me | Send Me a Message</title>
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/icon/favicon.ico">
     <link type="text/css" rel="stylesheet" href="assets/css/reset.css">
     <link type="text/css" rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <!-- The entire content of the site except for the sticky footer -->
     <div id="content">
         <header>
             <section>
@@ -33,30 +34,31 @@
                 <h1>Contact</h1>
                 <form>
                     <label for="name">Name</label><br>
-                    <input type="text" name="name" placeholder="Your Name"><br>
+                    <input type="text" id="name" placeholder="Your Name"><br>
                     <label for="email">Email</label><br>
-                    <input type="email" name="email" placeholder="example@yahoo.com"><br>
+                    <input type="email" id="email" placeholder="example@yahoo.com"><br>
                     <label for="message">Message</label><br>
-                    <textarea name="message" id="myTextArea" cols="30" rows="10"></textarea><br>
+                    <textarea id="message" id="myTextArea" cols="30" rows="10"></textarea><br>
                     <input id="submitButton" type="submit" value="Submit">
                 </form>
             </section>
             <section id="sideBar">
                 <h2>Connect With Me</h2>
                 <a href="https://github.com/amcnulty" class="socialIcon">
-                    <div id="gitHubIconTop"></div>
-                    <div id="gitHubIcon"></div>
+                    <div id="gitHubIconRed"></div>
+                    <div id="gitHubIconBlack"></div>
                 </a>
-                <a href="https://www.linkedin.com/in/aaron-mcnulty-64008183/"  class="socialIcon">
-                    <div id="linkedinIconTop"></div>
-                    <div id="linkedinIcon"></div>
+                <a id="middleIcon" href="https://www.linkedin.com/in/aaron-mcnulty-64008183/"  class="socialIcon">
+                    <div id="linkedinIconRed"></div>
+                    <div id="linkedinIconBlack"></div>
                 </a>
                 <a href="https://stackoverflow.com/users/8456358/amcnulty88?tab=profile"  class="socialIcon">
-                    <div id="stackIconTop"></div>
-                    <div id="stackIcon"></div>
+                    <div id="stackIconRed"></div>
+                    <div id="stackIconBlack"></div>
                 </a>
             </section>
         </div>
+        <!-- This is a blank div that is given the same height as the footer. This makes the body long enough to add in a footer without it overlapping content in the body. -->
         <div class="push"></div>
     </div>
     <footer>
