--- a/index.html
+++ b/index.html
@@ -34,13 +34,17 @@
                 <h1>About Me</h1>
                 <img id="profilePic" src="assets/images/profile.jpg" alt="My profile picture">
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi, dolorum amet, qui corporis ipsam omnis excepturi quis ut culpa tenetur tempora sed et delectus repudiandae illum expedita aut repellat. Fugit, asperiores. Architecto cupiditate ullam eius placeat ex autem eveniet vero odio tempora ipsum quas, officiis impedit esse a quis qui iusto quaerat provident molestiae hic? Repellendus voluptas animi recusandae quos!
+                    Welcome to my basic portfolio page. I started this site to showcase some of my interests, hobbies, past-times or whatever else you may call them. In recent years I have been called a renaissance man. That is, a person with many talents. I love to learn and I also love to teach others what I have learned. Perhaps you can learn something by checking out my <a href="portfolio.html">Portfolio Page</a>. If you have an questions be sure to <a href="contact.html">Contact Me</a>.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi magni aspernatur odit suscipit fuga obcaecati laboriosam. Officiis atque optio quisquam explicabo fuga asperiores eveniet, amet, ratione quasi accusamus quo maiores culpa inventore distinctio id aspernatur voluptatibus minima? Sint quisquam accusantium modi cupiditate sit temporibus quasi ut, corporis reprehenderit necessitatibus magni dolore veniam explicabo dolores mollitia incidunt optio fuga totam laborum aliquid illum animi. Illo dolor eaque ullam earum dolorem magnam officiis error quasi atque nostrum accusantium veritatis quam, temporibus fugit?
+                    As I have already mentioned, I love to learn. All of my interests/talents started as a basic curiosity that I needed to learn more about. One thing I started early on was playing music. While watching a band play at church, I found myself captivated by the drummer. Before this time I had never really watched a band live before. I studied what the drummer was doing as the band was playing and told myself "I can do that!" Sure enough, one week later I asked a friend if I could play his drumset and I was already playing the same beat I saw performed.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem modi eum deserunt mollitia, ducimus minima in deleniti omnis! Iure ex tenetur omnis facilis dolorum inventore distinctio accusantium! Omnis laborum nulla, maxime saepe ex blanditiis asperiores provident quibusdam labore eligendi consequuntur eum voluptatum eaque. Nemo ab itaque quis explicabo dolorem cumque aliquam ex voluptas distinctio, doloremque error temporibus voluptates dolores exercitationem alias pariatur harum dolorum ipsum, laboriosam excepturi sapiente in unde ducimus magni? Excepturi, dolorum iusto nobis enim tempora accusantium iure natus ipsa incidunt perspiciatis a quae consectetur aliquid corrupti vel!
+                    My most recent interest that is worth talking about is cooking. It wasn't until only a year and a half ago that I started becoming very interested in cooking. I was never the cook in the house. Actually, I was the person who told everyone <i>I can't cook</i>. The dish that made me really start cooking a lot was yellow thai curry soup. I started ordering yellow curry at every restaurant that served it. I liked the stuff so much I just had to make it at home. I found all the ingredients and made everything from scratch. It was a long process but well worth it. Now, I enjoy cooking several dishes that I used to only order in restaurants and tinkering with the recipe.
+                    
+                </p>
+                <p>
+                    There are many things that I enjoy doing. So many I don't want to talk about all of them right here. Enjoy checking out my portfolio! Also, I look forward to hearing from you!
                 </p>
             </section>
             <section id="sideBar">
