--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
                     <input id="submitButton" type="submit" value="Submit">
                 </form>
             </section>
-            <section id="sideBar">
+            <aside id="sideBar">
                 <h2>Connect With Me</h2>
                 <a href="https://github.com/amcnulty" class="socialIcon">
                     <div id="gitHubIconRed"></div>
@@ -56,7 +56,7 @@
                     <div id="stackIconRed"></div>
                     <div id="stackIconBlack"></div>
                 </a>
-            </section>
+            </aside>
         </div>
         <!-- This is a blank div that is given the same height as the footer. This makes the body long enough to add in a footer without it overlapping content in the body. -->
         <div class="push"></div>
