--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     There are many things that I enjoy doing. So many I don't want to talk about all of them right here. Enjoy checking out my portfolio! Also, I look forward to hearing from you!
                 </p>
             </section>
-            <section id="sideBar">
+            <aside id="sideBar">
                 <h2>Connect With Me</h2>
                 <a href="https://github.com/amcnulty" class="socialIcon">
                     <div id="gitHubIconRed"></div>
@@ -61,7 +61,7 @@
                     <div id="stackIconRed"></div>
                     <div id="stackIconBlack"></div>
                 </a>
-            </section>
+            </aside>
         </div>
         <!-- This is a blank div that is given the same height as the footer. This makes the body long enough to add in a footer without it overlapping content in the body. -->
         <div class="push"></div>
