--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
                         </div>
                     </div>
             </section>
-            <section id="sideBar">
+            <aside id="sideBar">
                 <h2>Connect With Me</h2>
                 <a href="https://github.com/amcnulty" class="socialIcon">
                     <div id="gitHubIconRed"></div>
@@ -87,7 +87,7 @@
                     <div id="stackIconRed"></div>
                     <div id="stackIconBlack"></div>
                 </a>
-            </section>
+            </aside>
         </div>
         <!-- This is a blank div that is given the same height as the footer. This makes the body long enough to add in a footer without it overlapping content in the body. -->
         <div class="push"></div>
